Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-05-30 (SVN):
    * scripts/makefile.inc (LIBSOCKET): Solaris (sun) needs -lresolv, as
      reported by Steven.

2012-05-30 (SVN):
    * hexen2/net_udp.c: Solaris (sun) needs including sys/sockio.h for
      SIOCGIFCONF and friends.

2012-05-30 (SVN):
    * snd_sun.c: Moved the Shutdown procedure above GetDMAPos in order
      to fix compilation.

2012-05-30 (SVN):
    * gl_vidsdl.c, vid_sdl.c (VID_SetMode): SDL documentation says that
      before the first call to SDL_SetVideoMode(), SDL_WM_SetIcon() must
      be called. Do so properly.

2012-05-30 (SVN):
    * scripts/makefile.inc: Defined default for AS.

2012-05-30 (SVN):
    * utils/hcc, dhcc: Removed pr_parse.c, merged its contents to hcc.c.
    * utils/hcc, dhcc: Don't use 0 instead of NULL as a function param
      for PR_Statement(), PR_GetDef() and CO_GenCode().

2012-05-27 (SVN):
    * cl_main.c, cl_ents.c, cl_input.c, cl_parse.c, cl_tent.c, host.c:
      Random tidying up. Also made hexenworld version of CL_BaseMove()
      to match its hexen2 counterpart by not calculating angles during
      cameramode.

2012-05-27 (SVN):
    * in_sdl.c: Support for joystick hat (POV) switch motion, based on
      ioquake3 code. We translate hat motions into K_AUX key presses.

2012-05-27 (SVN):
    * snd_timidity.c, snd_wildmidi.c: Changed a while construct into a
      for for better readability.

2012-05-25 (SVN):
    * in_sdl.c: IN_JoystickGetAxis() and IN_JoystickKeyeventForAxis() no
      longer accept a joystick id pointer parameter, but use the joy_id
      variable. Disabled the "keyevents for joystick axes" hack for now.
      Added a hack making IN_ActivateMouse() and IN_DeactivateMouse() to
      affect the trackball in order for joystick trackballs convert to
      mousemove properly. For the same purpose, move joystick trackball
      querying from IN_JoyMove() to IN_MouseMove(). Reserved K_AUX29-32