@@ -4,6 +4,9 @@ Development Progress	:
 ---------------------------
 
 2012-05-30 (SVN):
+    * arch_def.h: Classified AROS as PLATFORM_AMIGA.
+
+2012-05-30 (SVN):
     * scripts/makefile.inc (LIBSOCKET): Solaris (sun) needs -lresolv, as
       reported by Steven.
 
